# axum-jwt-auth

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  cliff.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: axum.rs
examples/cloudflare/: README.md  cloudflare.rs
examples/local/: local.rs
examples/remote/: jwt.key  remote.rs
src/: axum.rs  lib.rs  local.rs  remote.rs
tests/: integration_test.rs  jwt.key.pub
