[package]
name = "axum-jwt-auth"
version = "0.3.0"
edition = "2021"
authors = ["Cole MacKenzie"]
description = "A simple JWT authentication middleware for Axum"
license = "MIT"
repository = "https://github.com/cmackenzie1/axum-jwt-auth"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
jsonwebtoken = { version = "9" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["time"] }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
serde_json = "1"

[[example]]
name = "local"
path = "examples/local/local.rs"
