[package]
name = "axum-jwt-auth"
version = "0.5.1"
edition = "2021"
authors = ["Cole MacKenzie"]
description = "A simple JWT authentication middleware for Axum"
license = "MIT"
repository = "https://github.com/cmackenzie1/axum-jwt-auth"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
dashmap = "6.1.0"
derive_builder = "0.20.2"
futures = "0.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["time"] }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
serde_json = "1"
tracing-subscriber = "0.3.19"
rand = { version = "0.9.0", features = ["small_rng"] }

[[example]]
name = "local"
path = "examples/local/local.rs"

[[example]]
name = "remote"
path = "examples/remote/remote.rs"

[[example]]
name = "cloudflare"
path = "examples/cloudflare/cloudflare.rs"
